Start refactor towards video state PubSub topic

--- a/lib/seak_web/live/room_live/show.html.heex
+++ b/lib/seak_web/live/room_live/show.html.heex
@@ -24,7 +24,8 @@
     <ul>
       <li :for={{_id, meta} <- @presences}>
         <span class="status">
-          <.icon :if={meta.playing} name="hero-eye-solid" />
+          <.icon :if={meta.video_state == :playing} name="hero-eye-solid" />
+          <.icon :if={meta.video_state == :buffering} name="hero-video-camera-slash-solid" />
           <%= meta.username %>
         </span>
       </li>
