Update presence without interaction, fix player

--- a/lib/seak_web/live/room_live/show.html.heex
+++ b/lib/seak_web/live/room_live/show.html.heex
@@ -17,7 +17,7 @@
 <div class="row">
   <div class="video">
     <video id="video-content" phx-hook="Video" width="560" height="340" controls src={@current_src} preload>
-      Your browser does not support my HTML5 video player
+      Your browser does not support this HTML5 video player
     </video>
   </div>
   <div>
