Frontend work in room, redirect / to /rooms

--- a/lib/seak_web/live/room_live/show.html.heex
+++ b/lib/seak_web/live/room_live/show.html.heex
@@ -10,28 +10,24 @@
   </:actions>
 </.header>
 
-<pre>
-  <%= inspect(@presences, pretty: true) %>
-</pre>
-
-<div class="w-full flex flex-row items-stretch">
-  <div class="video">
-    <video id="video-content" phx-hook="Video" width="560" height="340" controls src={@current_src} preload>
+<div class="w-full pt-6 flex flex-col md:flex-row justify-between">
+  <div class="video pr-4">
+    <video id="video-content" phx-hook="Video" width="1080" height="720" controls src={@current_src} preload>
       Your browser does not support this HTML5 video player
     </video>
     <div>
       <ul>
         <li :for={{_id, meta} <- @presences}>
           <span class="status">
-            <.icon :if={meta.video_state == :playing} name="hero-eye-solid" />
-            <.icon :if={meta.video_state == :buffering} name="hero-video-camera-slash-solid" />
+            <.icon :if={meta.video_state == :playing} name="hero-play-mini" />
+            <.icon :if={meta.video_state == :waiting} name="hero-arrow-path-mini" />
             <%= meta.username %>
           </span>
         </li>
       </ul>
     </div>
   </div>
-  <div class="justify-self-end">
+  <div>
     <.live_component
       module={SeakWeb.RoomLive.ChatComponent}
       id="chat"
